--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
+    <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#000000">
+<link rel="apple-touch-icon" href="icon-192.png">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -191,6 +195,7 @@
         }
     </style>
 </head>
+    
 <body>
     <div class="container">
         <div class="header">
@@ -305,5 +310,19 @@
         // Actualizar cada 30 segundos
         setInterval(loadScheduleData, 30000);
     </script>
+    <script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', function() {
+    navigator.serviceWorker.register('./service-worker.js')
+      .then(function(registration) {
+        console.log('ServiceWorker registrado');
+      })
+      .catch(function(error) {
+        console.log('Error registrando ServiceWorker:', error);
+      });
+  });
+}
+</script>
+
 </body>
 </html>
