--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
+            background: linear-gradient(135deg, #000000 0%, #1a1a1a 100%);
             min-height: 100vh;
             padding: 10px;
         }
@@ -31,22 +31,33 @@
         }
 
         .header {
-            background: linear-gradient(135deg, #000000 0%, #333333 100%);
+            background: linear-gradient(135deg, #000000 0%, #1a1a1a 100%);
             color: white;
-            padding: 15px;
+            padding: 20px 15px;
             text-align: center;
+            position: relative;
+        }
+
+        .header-logo {
+            max-width: 180px;
+            height: auto;
+            margin: 0 auto 10px;
+            display: block;
         }
 
         .header h1 {
-            font-size: 1.5em;
+            font-size: 1.3em;
             margin-bottom: 5px;
             text-transform: uppercase;
-            letter-spacing: 1px;
+            letter-spacing: 3px;
+            font-weight: 300;
         }
 
         .header p {
-            font-size: 0.9em;
-            opacity: 0.9;
+            font-size: 0.85em;
+            opacity: 0.7;
+            font-weight: 300;
+            letter-spacing: 1px;
         }
 
         .schedule-container {
@@ -81,23 +92,25 @@
         .day-tab {
             min-width: 100px;
             padding: 12px 16px;
-            background: #f8f9fa;
+            background: #ffffff;
             border-radius: 8px;
             text-align: center;
             cursor: pointer;
             transition: all 0.3s ease;
-            border: 2px solid transparent;
+            border: 2px solid #e0e0e0;
             flex-shrink: 0;
+            color: #000;
         }
 
         .day-tab:hover {
-            background: #e9ecef;
+            background: #f5f5f5;
+            border-color: #bdbdbd;
         }
 
         .day-tab.active {
-            background: linear-gradient(135deg, #4a90e2 0%, #357abd 100%);
+            background: #000000;
             color: white;
-            border-color: #357abd;
+            border-color: #000000;
             font-weight: bold;
         }
 
@@ -133,31 +146,37 @@
         }
 
         .time-slot.available {
-            background: linear-gradient(135deg, #28a745 0%, #20c997 100%);
+            background: linear-gradient(135deg, #ffffff 0%, #f5f5f5 100%);
             cursor: pointer;
+            border: 2px solid #00c853;
+            color: #000;
         }
 
         .time-slot.available:active {
             transform: scale(0.98);
+            box-shadow: 0 4px 12px rgba(0, 200, 83, 0.3);
         }
 
         .time-slot.occupied {
-            background: linear-gradient(135deg, #dc3545 0%, #c82333 100%);
+            background: linear-gradient(135deg, #1a1a1a 0%, #000000 100%);
             cursor: not-allowed;
-            opacity: 0.6;
+            opacity: 0.85;
+            border: 2px solid #d32f2f;
         }
 
         .time-slot.finished {
-            background: linear-gradient(135deg, #6c757d 0%, #5a6268 100%);
+            background: linear-gradient(135deg, #424242 0%, #303030 100%);
             cursor: not-allowed;
             opacity: 0.5;
+            border: 2px solid #616161;
         }
 
         .time-slot.in-progress {
-            background: linear-gradient(135deg, #ff9800 0%, #f57c00 100%);
+            background: linear-gradient(135deg, #ff6f00 0%, #ff8f00 100%);
             cursor: default;
-            opacity: 0.9;
+            opacity: 1;
             border: 2px solid #ff6f00;
+            color: white;
         }
 
         .time-slot.in-progress .slot-content {
@@ -165,8 +184,8 @@
         }
 
         @keyframes pulse-border {
-            0%, 100% { box-shadow: 0 0 0 0 rgba(255, 152, 0, 0.7); }
-            50% { box-shadow: 0 0 0 10px rgba(255, 152, 0, 0); }
+            0%, 100% { box-shadow: 0 0 0 0 rgba(255, 111, 0, 0.7); }
+            50% { box-shadow: 0 0 0 10px rgba(255, 111, 0, 0); }
         }
 
         .slot-player {
@@ -177,10 +196,20 @@
 
         .slot-content {
             padding: 15px;
-            color: white;
+            color: inherit;
             display: flex;
             justify-content: space-between;
             align-items: center;
+        }
+
+        .time-slot.available .slot-content {
+            color: #000;
+        }
+
+        .time-slot.occupied .slot-content,
+        .time-slot.finished .slot-content,
+        .time-slot.in-progress .slot-content {
+            color: white;
         }
 
         .slot-left {
@@ -214,8 +243,8 @@
         }
 
         .slot-discount {
-            background: #ffc107;
-            color: #000;
+            background: #00c853;
+            color: #fff;
             padding: 3px 8px;
             border-radius: 5px;
             font-size: 0.7em;
@@ -334,19 +363,21 @@
         }
 
         .legend-color.available {
-            background: linear-gradient(135deg, #28a745 0%, #20c997 100%);
+            background: linear-gradient(135deg, #ffffff 0%, #f5f5f5 100%);
+            border: 2px solid #00c853;
         }
 
         .legend-color.occupied {
-            background: linear-gradient(135deg, #dc3545 0%, #c82333 100%);
+            background: linear-gradient(135deg, #1a1a1a 0%, #000000 100%);
+            border: 2px solid #d32f2f;
         }
 
         .legend-color.in-progress {
-            background: linear-gradient(135deg, #ff9800 0%, #f57c00 100%);
+            background: linear-gradient(135deg, #ff6f00 0%, #ff8f00 100%);
         }
 
         .legend-color.finished {
-            background: linear-gradient(135deg, #6c757d 0%, #5a6268 100%);
+            background: linear-gradient(135deg, #424242 0%, #303030 100%);
         }
 
         .loading {
@@ -367,8 +398,9 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🎾 NEGRO PADEL Y ENCUENTRO 🎾</h1>
-            <p>Hacé click en el turno que querés reservar</p>
+            <img src="logo.png" alt="NEGRO PADEL" class="header-logo">
+            <h1>PADEL Y ENCUENTRO</h1>
+            <p>Reservá tu turno en segundos</p>
         </div>
 
         <div class="schedule-container">
