--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             }
 
             .day-header {
-                background: linear-gradient(135deg, #4a90e2 0%, #357abd 100%);
+                background: linear-gradient(135deg, #000000 0%, #1a1a1a 100%);
                 color: white;
                 padding: 10px;
                 text-align: center;
