--- a/index.html
+++ b/index.html
@@ -789,5 +789,17 @@
             });
         }
     </script>
+    <div style="
+        background: #000;
+        color: rgba(255,255,255,0.5);
+        text-align: center;
+        padding: 20px;
+        font-size: 0.8em;
+        letter-spacing: 1px;
+        margin-top: 10px;
+    ">
+        © 2026 NEGRO PADEL Y ENCUENTRO · Todos los derechos reservados
+    </div>
+
 </body>
 </html>
